doc: documenta RateController
