# app/Http/Controllers/RateController.php
@@ -9,7 +9,29 @@ use App\Http\Requests\RateRequest;
 use App\Repositories\RateRepository;
 use App\Services\ResponseService;
 use Illuminate\Http\JsonResponse;
+use OpenApi\Annotations as OA;
 
+/**
+ * @OA\Parameter(
+ *    parameter="Agreement",
+ *    name="agreement",
+ *    in="path",
+ *    description="Agreement id",
+ *    style="form",
+ *    @OA\Schema(type="integer"),
+ * )
+ *
+ * @OA\Response(
+ *   response="ReturnRate",
+ *   description="Response is successful",
+ *
+ *   @OA\JsonContent(
+ *        @OA\Property(property="message", type="string"),
+ *        @OA\Property(property="data", type="array", maxItems=1, @OA\Items(ref="#/components/schemas/Rate")),
+ *        @OA\Property(property="fails", type="bool"),
+ *    )
+ *  )
+ */
 class RateController extends IRouteController
 {
     public function __construct(
@@ -20,6 +42,24 @@ class RateController extends IRouteController
         parent::__construct($responseService);
     }
 
+    /**
+     * @OA\Post(
+     *     tags={"/rate"},
+     *     path="/agreement/{agreement}/rate",
+     *     summary="Store rate",
+     *     description="Relates rate to agreement on database",
+     *     security={@OA\SecurityScheme(ref="#/components/securitySchemes/Sanctum")},
+     *     @OA\Parameter(ref="#/components/parameters/Agreement"),
+     *     @OA\RequestBody(ref="#/components/requestBodies/RateStore"),
+     *     @OA\Response(response="201", ref="#/components/responses/ReturnRate"),
+     *     @OA\Response(response="401", ref="#/components/responses/401"),
+     *     @OA\Response(response="422", ref="#/components/responses/422"),
+     *     @OA\Response(response="500", ref="#/components/responses/500"),
+     * )
+     *
+     * @throws CheckDBOperationException
+     * @throws AuthorizationException
+     */
     public function store(RateRequest $request): JsonResponse
     {
         try {
@@ -34,6 +74,24 @@ class RateController extends IRouteController
         }
     }
 
+    /**
+     * @OA\Get(
+     *     tags={"/rate"},
+     *     path="/agreement/{agreement}/rate/{author}",
+     *     summary="Fetch rate",
+     *     description="Fetch unique rate of an agreement",
+     *     security={@OA\SecurityScheme(ref="#/components/securitySchemes/Sanctum")},
+     *     @OA\Parameter(ref="#/components/parameters/Agreement"),
+     *     @OA\Parameter(ref="#/components/parameters/Author"),
+     *     @OA\Response(response="200", ref="#/components/responses/ReturnRate"),
+     *     @OA\Response(response="401", ref="#/components/responses/401"),
+     *     @OA\Response(response="422", ref="#/components/responses/422"),
+     *     @OA\Response(response="500", ref="#/components/responses/500"),
+     * )
+     *
+     * @throws CheckDBOperationException
+     * @throws AuthorizationException
+     */
     public function show(RateRequest $request): JsonResponse
     {
         $rate = $this->rateRepository->fetch($request->author, $request->agreement);
@@ -44,6 +102,35 @@ class RateController extends IRouteController
         );
     }
 
+    /**
+     * @OA\Post(
+     *     tags={"/rate"},
+     *     path="/agreement/{agreement}/rate/{author}/update",
+     *     summary="[PUT]::/agreement/{agreement}/rate/{author} alias",
+     *     description="Redirect request to [PUT]::/agreement/{agreement}/rate/{author}",
+     *     security={@OA\SecurityScheme(ref="#/components/securitySchemes/Sanctum")},
+     *
+     *     @OA\Parameter(ref="#/components/parameters/Agreement"),
+     *     @OA\Parameter(ref="#/components/parameters/Author"),
+     *     @OA\Response(response="302", description="Redirected to [PUT]::/agreement/{agreement}/rate/{author}")
+     * )
+     * @OA\Put(
+     *     tags={"/rate"},
+     *     path="/agreement/{agreement}/rate/{author}",
+     *     summary="Update rate",
+     *     description="Update rate on database",
+     *     security={@OA\SecurityScheme(ref="#/components/securitySchemes/Sanctum")},
+     *     @OA\Parameter(ref="#/components/parameters/Agreement"),
+     *     @OA\RequestBody(ref="#/components/requestBodies/RateUpdate"),
+     *     @OA\Response(response="200", ref="#/components/responses/ReturnRate"),
+     *     @OA\Response(response="401", ref="#/components/responses/401"),
+     *     @OA\Response(response="422", ref="#/components/responses/422"),
+     *     @OA\Response(response="500", ref="#/components/responses/500"),
+     * )
+     *
+     * @throws CheckDBOperationException
+     * @throws AuthorizationException
+     */
     public function update(RateRequest $request): JsonResponse
     {
         try {
@@ -60,6 +147,35 @@ class RateController extends IRouteController
         }
     }
 
+    /**
+     * @OA\Post(
+     *      tags={"/rate"},
+     *      path="/agreement/{agreement}/rate/{author}/delete",
+     *      summary="[DELETE]::/agreement/{agreement}/rate/{author} alias",
+     *      description="Redirect request to [DELETE]::/agreement/{agreement}/rate/{author}",
+     *      security={@OA\SecurityScheme(ref="#/components/securitySchemes/Sanctum")},
+     *
+     *      @OA\Parameter(ref="#/components/parameters/Agreement"),
+     *      @OA\Parameter(ref="#/components/parameters/Author"),
+     *      @OA\Response(response="302", description="Redirected to [DELETE]::/agreement/{agreement}/rate/{author}")
+     *  )
+     * @OA\Delete(
+     *     tags={"/rate"},
+     *     path="/agreement/{agreement}/rate/{author}",
+     *     summary="Delete rate",
+     *     description="Delete rate on database",
+     *     security={@OA\SecurityScheme(ref="#/components/securitySchemes/Sanctum")},
+     *     @OA\Parameter(ref="#/components/parameters/Agreement"),
+     *     @OA\Parameter(ref="#/components/parameters/Author"),
+     *     @OA\Response(response="204", ref="#/components/responses/204"),
+     *     @OA\Response(response="401", ref="#/components/responses/401"),
+     *     @OA\Response(response="422", ref="#/components/responses/422"),
+     *     @OA\Response(response="500", ref="#/components/responses/500"),
+     * )
+     *
+     * @throws CheckDBOperationException
+     * @throws AuthorizationException
+     */
     public function destroy(RateRequest $request): JsonResponse
     {
         return $this->rateRepository->delete(
